antiwey@gmail.com20190606:1. AndroidManifest.xml中增加petbus_firstvisit activity;2. petbus_welcome.java中自动启动 activity petbus_firstvisit

--- a/project/app/src/main/AndroidManifest.xml
+++ b/project/app/src/main/AndroidManifest.xml
@@ -29,6 +29,12 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity android:name=".petbus_firstvisit">
+            <intent-filter>
+                <action android:name="android.intent.action.petbus_firstvisit" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
