antiwey@gmail.com20190614: 添加petbus_profile petbus_profileadd 两个activity的跳转功能

--- a/project/app/src/main/AndroidManifest.xml
+++ b/project/app/src/main/AndroidManifest.xml
@@ -22,12 +22,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".petbus_petmanage">
-            <intent-filter>
-                <action android:name="android.intent.action.petbus_welcome" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
         <activity android:name=".petbus_action">
             <intent-filter>
                 <action android:name="android.intent.action.petbus_action" />
@@ -37,6 +31,18 @@
         <activity android:name=".petbus_firstvisit">
             <intent-filter>
                 <action android:name="android.intent.action.petbus_firstvisit" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".petbus_profile">
+            <intent-filter>
+                <action android:name="android.intent.action.petbus_profile" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".petbus_profileadd">
+            <intent-filter>
+                <action android:name="android.intent.action.petbus_profileadd" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
