antiwey@gmail.com20190921: 重构profile、profileadd、profileedit代码，解决bug PB273,PB274 1. 重构petprofile代码，petbus_firstvisit.java, petbus_profileadd.java, petbus_profiledit.java 继承petbus_profile 2. Fix bug PB273-编辑资料-头像大小比设计尺寸小    [问题原因] 保存头像时，图片大小设置的是长宽均为200px，与设计尺寸不符    [解决方案] 按照UI设计大小实现，头像长宽均为103dp，保存时按照手机分辨率将103dp换算为px 3. Fix bug PB274-宠物编辑-更改头像后，页面未更新    [问题原因] 在onResume中显示被编辑的宠物资料，onResume中设置的值没有被更新，在画面切换返回后又会恢复在onResume中设置的值（比如打开相册后回到编辑页面）    [解决方案] 在onCreate中设置显示被编辑的宠物资料，资料重新输入后，默认自动显示在编辑页面中

--- a/project/app/src/main/AndroidManifest.xml
+++ b/project/app/src/main/AndroidManifest.xml
@@ -52,6 +52,12 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity android:name=".petbus_profilelist">
+            <intent-filter>
+                <action android:name="android.intent.action.petbus_profilelist" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="${applicationId}.provider"
